HIL/src/objects/Interests__c.object
<CustomObject>
    <fields>
        <fullName>Client_Prospect__c</fullName>
        <label>Client/Prospect</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Interests</relationshipLabel>
        <relationshipName>Interests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <label>Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Author</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gym</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hobbies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Religious Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shirt Size</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Snack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sport Event Tickets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports Teams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV Shows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annuities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income/Yield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Municipal Bonds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSG Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>529 plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation/Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Center of Influence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Record_Details__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id , &quot;Click here for details&quot;, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Details</label>
        <type>Text</type>
    </fields>
    <label>Interest</label>
    <nameField>
        <displayFormat>INT-{000000}</displayFormat>
        <label>Interest #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>